--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,7 @@ h1, h2, h3, h4, h5, h6 {
 	height: 100%;
 	width: 100%;
 	border: 2px solid black;
+	font-size: 2rem;
 	display: flex;
 	align-items: center;
 	justify-content: center;
